# diploma-practice

./: .gitignore
lab2/: .Module.symvers.cmd  .lab2.ko.cmd  .lab2.mod.cmd  .lab2.mod.o.cmd  .lab2.module.ko.cmd  .lab2.module.mod.cmd  .lab2.module.mod.o.cmd  .lab2.module.o.cmd  .lab2.o.cmd  .modules.order.cmd  Makefile  build-a-kernel.sh  lab2.c  lab2.ko  lab2.mod  lab2.mod.c  lab2.module.c  lab2.module.ko  lab2.module.mod  lab2.module.mod.c  modules.order  Отчёт.docx
linux_module/: .Module.symvers.cmd  .gitignore  .hello_world.module.ko.cmd  .hello_world.module.mod.cmd  .hello_world.module.mod.o.cmd  .hello_world.module.o.cmd  .modules.order.cmd  Makefile  hello_world.module.c  hello_world.module.ko  hello_world.module.mod  hello_world.module.mod.c  modules.order
pipewire/lesson1/: CMakeLists.txt  Makefile  lesson1.c
pipewire/lesson2/: CMakeLists.txt  lesson2.c
pipewire/lesson3/: CMakeLists.txt  lesson3.c
pipewire/lesson4/: CMakeLists.txt  Makefile  a.out  lesson4.c
pipewire/lesson5/: Makefile  a.out  lesson5.c
pipewire/lesson6/: Makefile  a.out  lesson6.c
